// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToBePlannedCard Displays a draggable card with accessibility pattern 1`] = `
<div
  class="element-backlog-item"
  data-element-id="100"
>
  <div
    class="element-card element-card-lake_placid_blue element-card-background-peggy_pink_text element-card-with-accessibility element-not-draggable"
    data-test="to-be-planned-card"
    title="You cannot plan items"
  >
    <div
      class="element-card-content"
    >
      <div
        class="element-card-xref-label"
      >
        <a
          class="element-card-xref element-card-xref-lake_placid_blue"
          data-not-drag-handle="true"
          href="/plugins/tracker/?aid=100"
        >
          
                    
                
        </a>
         
        <span
          class="element-card-label"
        >
          My artifact
        </span>
      </div>
    </div>
     
    <div
      class="element-card-accessibility"
    />
  </div>
   
  <!---->
</div>
`;

exports[`ToBePlannedCard Displays a not draggable card without accessibility pattern 1`] = `
<div
  class="element-backlog-item"
  data-element-id="100"
>
  <div
    class="element-card element-card-lake_placid_blue element-not-draggable"
    data-test="to-be-planned-card"
    title="You cannot plan items"
  >
    <div
      class="element-card-content"
    >
      <div
        class="element-card-xref-label"
      >
        <a
          class="element-card-xref element-card-xref-lake_placid_blue"
          data-not-drag-handle="true"
          href="/plugins/tracker/?aid=100"
        >
          
                    
                
        </a>
         
        <span
          class="element-card-label"
        >
          My artifact
        </span>
      </div>
    </div>
     
    <!---->
  </div>
   
  <!---->
</div>
`;
